--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -72,7 +72,7 @@ html {
 }
 
 ::selection {
-  background-color: theme("colors.yellow");
+  background-color: rgba(112, 0, 255, 1);
   color: #fff;
 }
 
