--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -29,16 +29,15 @@
     box-shadow: 0 0 1rem theme("colors.mush.dark");
   }
 
-  @media (max-width: 768px) { // Add this line
+  @media (hover: none) {// Add this line
     &:hover {
       background-position: 0%; // Reset hover effect on mobile
       color: white;
     }
 
     &:active {
-      background-position: 100%; // Button turns yellow when clicked
+      background-position: 0%; // Reset hover effect on mobile
       color: white;
-      transition: background-position 0.3s ease-in-out; // Add transition for smooth color change
     }
   } // Add this line
 }
